fix: resolve java URL deprecation warning